--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt=" A lion image">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion image" title="Lion Image">
   </body>
 </html>
